# hexagonal-fastapi

./: .gitignore  CLAUDE.md  MODULARITY.md  README.md  alembic.ini  pyproject.toml  python_guidelines.md
app/: main.py
app/core/: __init__.py  accounts.py  errors.py  membership.py  result.py  team.py  user.py
app/shell/: __init__.py  cli.py  db_types.py  http.py  memory_store.py  postgres_store.py  sql_store.py  sqlite_store.py  stores.py  user_store.py
app/shell/database/: __init__.py  memory_store.py  sql_store.py  stores.py  types.py
app/shell/database/migrations/: env.py  script.py.mako
app/shell/database/migrations/versions/: 472235c0684d_create_users_teams_and_memberships.py
tests/: test_accounts.py  test_cli.py  test_http.py  test_membership.py  test_postgres_integration.py  test_properties.py  test_sqlite_store.py  test_store.py  test_team.py  test_unit_of_work.py  test_user.py
