[project]
name = "user-profile-fcis"
version = "0.2.0"
description = "Functional-core / imperative-shell rewrite of a small user-profile service, following python_guidelines.md"
requires-python = ">=3.14"
# Exact pins. The full transitive graph is locked in uv.lock; these are the
# direct dependencies, pinned to the latest release for reproducible installs.
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "pydantic==2.13.4",     # imported directly at the HTTP boundary (app/shell/http.py)
    "typer==0.26.7",        # the CLI delivery mechanism (app/shell/cli.py)
    "httpx2==2.3.0",        # required by fastapi.testclient (starlette selects httpx2 when present)
]

# Optional second backend: the Postgres store (app/shell/postgres_store.py).
# Install with: uv sync --extra postgres
[project.optional-dependencies]
postgres = [
    "sqlalchemy==2.0.50",
    "psycopg[binary]==3.3.4",
]

# Dev tooling. The guidelines (§13) treat the type checker as part of the
# language, not a linter: mypy --strict, ruff, pytest, hypothesis.
[dependency-groups]
dev = [
    "pytest==9.0.3",
    "hypothesis==6.155.2",
    "mypy==2.1.0",
    "ruff==0.15.16",
    "testcontainers[postgres]==4.14.2",  # real-Postgres integration tests (needs Docker)
]

# Native TOML config table — pytest 9.0+ (not the legacy [tool.pytest.ini_options],
# which encodes everything as INI-style strings). Values are real TOML types.
[tool.pytest]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
strict = true
python_version = "3.14"
files = ["app", "tests"]

[[tool.mypy.overrides]]
# Fallback only. The canonical typing path installs the `postgres` extra
# (`uv run --extra postgres mypy`), so mypy checks the store against SQLAlchemy's
# real types. This just keeps `uv run mypy` (without the extra) from hard-failing
# on the import — interop tolerated at the edge (§16).
module = ["sqlalchemy.*", "testcontainers.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
# The guidelines' recommended minimum (§13) is E, F, B, UP, SIM, RET, TCH; we add
# I (import sorting) so `ruff check --fix` organizes imports. TCH (hoisting
# type-only imports under `if TYPE_CHECKING`) is omitted on purpose (§16): on
# Python 3.14 annotations are evaluated lazily (PEP 649) and Pydantic and Typer
# read them at runtime, so moving type-only imports out of the module is the
# fragile pattern we deliberately avoid — e.g. `Result` is imported at runtime in
# the core, not hidden behind TYPE_CHECKING. Enable TCH only if you never
# introspect annotations at runtime.
select = ["E", "F", "I", "B", "UP", "SIM", "RET"]

[tool.ruff.lint.isort]
combine-as-imports = true  # keep `X, Y as Z` from one module on a single import

[tool.ruff.lint.per-file-ignores]
# The integration test guards heavy imports behind `pytest.importorskip`, so those
# imports legitimately sit below module-level code.
"tests/test_postgres_integration.py" = ["E402"]
