[project]
name = "user-profile-fcis"
version = "0.2.0"
description = "Functional-core / imperative-shell rewrite of a small user-profile service, following python_guidelines.md"
requires-python = ">=3.14"
# Exact pins. The full transitive graph is locked in uv.lock; these are the
# direct dependencies, pinned to the latest release for reproducible installs.
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "pydantic==2.13.4",     # imported directly at the HTTP boundary (app/shell/http.py)
    "typer==0.26.7",        # the CLI delivery mechanism (app/shell/cli.py)
    "httpx2==2.3.0",        # required by fastapi.testclient (starlette selects httpx2 when present)
    "sqlalchemy==2.0.50",   # the SQL backend (app/shell/sql_store.py): typed schema, pooling, dialects
]

# Optional Postgres driver for the SQL store (SQLite needs nothing extra).
# Install with: uv sync --extra postgres
[project.optional-dependencies]
postgres = [
    "psycopg[binary]==3.3.4",
]

# Dev tooling. The guidelines (§13) treat the type checker as part of the
# language, not a linter: ty, ruff, pytest, hypothesis.
[dependency-groups]
dev = [
    "pytest==9.0.3",
    "hypothesis==6.155.2",
    "ty==0.0.49",
    "ruff==0.15.16",
    "testcontainers[postgres]==4.14.2",  # real-Postgres integration tests (needs Docker)
]

# Native TOML config table — pytest 9.0+ (not the legacy [tool.pytest.ini_options],
# which encodes everything as INI-style strings). Values are real TOML types.
[tool.pytest]
testpaths = ["tests"]
pythonpath = ["."]

# ty (Astral's type checker) has no strict/lax switch — its default rule set is
# the gate. Run with: uv run ty check
[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["app", "tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
# The guidelines' recommended minimum (§13) is E, F, B, UP, SIM, RET, TCH; we add
# I (import sorting) so `ruff check --fix` organizes imports. TCH (hoisting
# type-only imports under `if TYPE_CHECKING`) is omitted on purpose (§16): on
# Python 3.14 annotations are evaluated lazily (PEP 649) and Pydantic and Typer
# read them at runtime, so moving type-only imports out of the module is the
# fragile pattern we deliberately avoid — e.g. `Result` is imported at runtime in
# the core, not hidden behind TYPE_CHECKING. Enable TCH only if you never
# introspect annotations at runtime.
select = ["E", "F", "I", "B", "UP", "SIM", "RET"]

[tool.ruff.lint.isort]
combine-as-imports = true  # keep `X, Y as Z` from one module on a single import

[tool.ruff.lint.per-file-ignores]
# The integration test guards heavy imports behind `pytest.importorskip`, so those
# imports legitimately sit below module-level code.
"tests/test_postgres_integration.py" = ["E402"]
